# prt_t

./: AdapStan_RSI  Adaptive_RSI  README.md  Standard_RSI  설명.md
.qwen/: settings.json.orig
backend/: .gitignore  pyproject.toml
backend/src/ test/: gausian_test.py
backend/src/prj_t_backend/: __init__.py  __main__.py  backtest_engine.py  config.py  main.py
frontend/: TRADINGVIEW_SETUP.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/BacktestChart/: index.tsx
frontend/src/components/TVChartContainer/: index.module.css  index.tsx
frontend/src/lib/: api.ts
